--- a/main.css
+++ b/main.css
@@ -8,6 +8,7 @@ body {
 .navbar {
     background-color: blue;
     height: 50px;
+    margin:0; 
     padding: 0 20px;
     color: white;
     font-weight: bold;
