--- a/main.css
+++ b/main.css
@@ -44,19 +44,56 @@ body {
 }
 
 .card-container {
-    display: flex;
+    display: inline;
     flex-wrap: wrap;
     justify-content: center;
     margin-top: 20px;
   }
   
   .card {
-    width: 100px;
-    height: 100px;
+    width: 75px;
+    height: 120px;
     margin: 10px;
-    background-color: #999;
-    color: white;
+    background-color: white;
+    color: none;
     font-size: 48px;
     text-align: center;
+    justify-content: center;
     line-height: 100px;
+    transition: transform 0.5s;
   }
+
+
+  .card-front,
+  .card-back {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      backface-visibility: hidden;
+  }
+  
+  .card-front {
+      transform: rotateY(0deg);
+      color: white;
+  }
+  
+  .card-back {
+      transform: rotateY(180deg);
+  }
+  
+  .card-flip .card-front {
+      transform: rotateY(-180deg);
+  }
+  
+  .card-flip .card-back {
+      transform: rotateY(0deg);
+  }
+
+  .emoji {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
