--- a/main.css
+++ b/main.css
@@ -102,3 +102,32 @@ body {
     justify-content: center;
     height: 100%;
 }
+
+#leaderboard table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  #leaderboard th {
+    background-color: blue;
+    color: white;
+    font-weight: bold;
+    padding: 5px;
+    text-align: center;
+  }
+  
+  #leaderboard td {
+    padding: 5px;
+    text-align: center;
+  }
+  
+  #leaderboard tr:nth-child(odd) {
+    background-color: #f2f2f2;
+  }
+
+ 
+  
+  table {
+    border-spacing: 2px;
+    margin: 0 auto;
+  }
